[project]
name = "hko-forecast"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "certifi",
    "streamlit>=1.56.0",
    "pandas>=3.0.2",
    "altair>=6.0.0",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "psycopg2-binary>=2.9.12",
]

requires-python = ">=3.11"

[project.scripts]
fetch-forecast = "scripts.fetch_forecast:main"

[tool.uv]
package = true
